[project]
name = "test"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "apowerfulmei",email = "528320434@qq.com"},
]
dependencies = [
    "pandas==2.2.1",
    "requests==2.32.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
